# decaf

./: CMakeLists.txt  COMMANDS.md  README.md  package.xml
config/: drive_bot.rviz  main.rviz  my_controllers.yaml  view_bot.rviz
cv/: package.xml  setup.py
cv/config/: cv_params.yaml
cv/cv/: detect.py  detect_lanes.py  detect_object.py  follow_object.py
cv/launch/: lane_detection.launch.py  tracker.launch.py
description/: CMakeLists.txt  camera.xacro  gazebo_control.xacro  lidar.xacro  package.xml  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
description/config/: ekf.yaml  mapper_params_online_async.yaml  my_controllers.yaml  nav2_params.yaml  twist_mux.yaml
description/launch/: launch_sim.launch.py  localization_launch.py  navigation_launch.py  online_async_launch.py  rsp.launch.py
description/rviz/: main.rviz
description/urdf/: camera.xacro  depth_camera.xacro  gazebo_control.xacro  gps.xacro  imu.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
launch/: launch_sim.launch.py  localization_launch.py  navigation_launch.py  online_async_launch.py  rsp.launch.py
navigation/: package.xml  setup.py
navigation/config/: igvc_waypoints.yaml
navigation/navigation/: waypoint_follower.py
pointcloud_to_laserscan/launch/: sample_pointcloud_to_laserscan_launch.py
pointcloud_to_laserscan/src/: pointcloud_to_laserscan_node.cpp
scan_fusion/: CMakeLists.txt  package.xml
scan_fusion/launch/: fused_sensor.launch.py
scan_fusion/src/: fuse_scans.cpp
worlds/: new.world  new_start.world  obstacles.world
(+4 files in other folders)
